google drive restore

--- a/res/layout/activity_google_drive_backup.xml
+++ b/res/layout/activity_google_drive_backup.xml
@@ -33,6 +33,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/auto_identity_backup_via_google" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/google_drive_account_label" />
+
+            <TextView
+                android:id="@+id/driveAccount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
