--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -42,10 +42,13 @@
 
         <Button
             android:id="@+id/bLogin"
+            style="@style/Widget.Sherlock.ActionButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
             android:text="@string/login" />
+
+        
     </LinearLayout>
 
 </ScrollView>
