import and export layout

--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -1,95 +1,147 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".ExportIdentityActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp"
-        tools:context=".ExportIdentityActivity" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
+        <Spinner
+            android:id="@+id/identitySpinner"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/backup_device"
+            android:textSize="12sp"
+            android:textStyle="bold" >
+        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:orientation="horizontal" >
+            android:orientation="vertical" >
 
-            <TextView
+      <!--       <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/identity_colon" />
-
-            <Spinner
-                android:id="@+id/identitySpinner"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:textSize="16dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal" >
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center_horizontal"
+                android:text="@string/backup_local_location_label" /> -->
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/backupLocalLocation"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/backup_location" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/identityBackupPath"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:gravity="center" />
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:text="@string/backup_location_note" />
 
         <Button
             android:id="@+id/bExportSd"
+            style="@style/Widget.Sherlock.ActionButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/export_sd"
+            android:textColor="@color/surespotBlue"
             android:textSize="16dp" >
         </Button>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="#aaa" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/backup_drive"
+            android:textSize="12sp"
+            android:textStyle="bold" >
+        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal" >
-            
+
             <TextView
                 android:id="@+id/exportDriveAccount"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/no_google_account_selected"
                 android:textSize="16sp" />
+
+            <View
+                android:id="@+id/vertical_divider"
+                android:layout_width="1px"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#aaa" />
 
             <Button
                 android:id="@+id/bSelectDriveAccount"
+                style="@style/Widget.Sherlock.ActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/select_google_drive_account" >
+                android:text="@string/select_google_drive_account"
+                android:textColor="@color/surespotBlue" >
             </Button>
         </LinearLayout>
 
         <Button
             android:id="@+id/bBackupDrive"
+            style="@style/Widget.Sherlock.ActionButton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/backup_drive"
+            android:text="@string/backup_drive_button"
+            android:textColor="@color/surespotBlue"
             android:textSize="16dp" >
         </Button>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="#aaa" />
     </LinearLayout>
 
 </ScrollView>
